--- a/templates/menu/nav.html.twig
+++ b/templates/menu/nav.html.twig
@@ -28,7 +28,12 @@
 
                 {% endif %}
 
-
+                {#                <li class="nav-item pl-1">
+                    <a class="nav-link" href="#"><i class="fa fa-user-plus fa-fw mr-1"></i>Kayıt Ol</a>
+                </li>
+                <li class="nav-item pl-1">
+                    <a class="nav-link" href="#"><i class="fa fa-sign-in fa-fw mr-1"></i>Oturum Aç</a>
+                </li> #}
             </ul>
         </div>
     </div>
