--- a/templates/menu/nav.html.twig
+++ b/templates/menu/nav.html.twig
@@ -10,21 +10,27 @@
             <ul class="navbar-nav ml-auto">
                 {% if app.user %}
                     <li class="nav-item pl-1">
-                        <a class="nav-link" href="{{ path('user_show', {'id': app.user.id}) }}"><i class="fa fa-user-plus fa-fw mr-1"></i>Mon profil</a>
+                        <a class="nav-link" href="{{ path('user_show', {'id': app.user.id}) }}"><i
+                                    class="fa fa-user-plus fa-fw mr-1"></i>Mon profil</a>
                     </li>
                     <li class="nav-item pl-1">
                         <a class="nav-link" href="{{ path('app_logout') }}"><i
                                     class="fa fa-phone fa-fw fa-rotate-180 mr-1"></i>Logout</a>
                     </li>
+                    {% for role in app.user.roles %}
+                        {% if role == 'ROLE_ADMIN'  %}
 
-{#                {% elseif app.user.isAdmin() %}#}
+{#                    {% if app.user.roles == 'ROLE_ADMIN' %}#}
 
+
+                        <li class="nav-item pl-1">
+                            <a class="nav-link" href="{{ path('app_register') }}"><i class="fa fa-home fa-fw mr-1"></i>Register</a>
+                        </li>
+                    {% endif %}
+                    {% endfor %}
 
                 {% else %}
 
-                    <li class="nav-item pl-1">
-                        <a class="nav-link" href="{{ path('app_register') }}"><i class="fa fa-home fa-fw mr-1"></i>Register</a>
-                    </li>
 
                     <li class="nav-item pl-1">
                         <a class="nav-link" href="{{ path('app_login') }}"><i class="fa fa-info-circle fa-fw mr-1"></i>Login</a>
