--- a/templates/menu/nav.html.twig
+++ b/templates/menu/nav.html.twig
@@ -20,7 +20,9 @@
                     {% for role in app.user.roles %}
                         {% if role == 'ROLE_ADMIN'  %}
 
-{#                    {% if app.user.roles == 'ROLE_ADMIN' %}#}
+                            <li class="nav-item pl-1">
+                                <a class="nav-link" href="{{ path('admin_campus_list') }}"><i class="fa fa-home fa-fw mr-1"></i>Gestion Campus</a>
+                            </li>
 
 
                         <li class="nav-item pl-1">
