Admin ajout campus

--- a/templates/admin/adcampus.html.twig
+++ b/templates/admin/adcampus.html.twig
@@ -32,10 +32,14 @@
 
             {% endfor %}
             <tr>
-                <form name="campusAdmin" action="" method="post">
-                    <th scope="row"><input type="text"></th>
-                    <td><button type="submit">Ajouter</button></td>
-                </form>
+                {{ form_start(campuForm) }}
+                {#<form action="{{ path('admin_campus_add') }}" name="campusAdmin" method="post"> #}
+                <th scope="row">{# <input name="name" type="text"> #}{{ form_widget(campuForm) }}</th>
+                <td>
+                    <button type="submit">Ajouter</button>
+                </td>
+                {#</form> #}
+                {{ form_end(campuForm) }}
             </tr>
 
             </tbody>
