ajout flash sur base + comparaison mdp pour modification profil

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,6 +20,14 @@
 <header>
     {{ include('menu/nav.html.twig') }}
 
+    {% for label, messages in app.flashes() %}
+        {% for message in messages %}
+            <div class="flash flash-{{ label }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endfor %}
+
 </header>
 {% block body %}{% endblock %}
 </body>
