--- a/templates/sortie/list.html.twig
+++ b/templates/sortie/list.html.twig
@@ -7,10 +7,39 @@
 
 {% block body %}
 
+    <section class="container list">
+    <table class="table table-hover">
+    <thead>
+    <tr>
+        <th scope="col">Nom</th>
+        <th scope="col">Date</th>
+        <th scope="col">Cloture</th>
+        <th scope="col">Inscrits / places</th>
+        <th scope="col">Etat</th>
+        <th scope="col">Inscrit</th>
+        <th scope="col">Organisateur</th>
+        <th scope="col">Actions</th>
+    </tr>
+    </thead>
+    <tbody>
+
     {% for sortie in sorties %}
-        <p> {{ sortie.name }} | DATE : {{ sortie.firstAirDate | date('d/m/y H:i') }} | Cloture : {{ sortie.dateLimiteInscription | date('d/m/y') }}
-         | Inscrits : {{ sortie.users | length }} / {{ sortie.nbInscriptionMax }} | Etat : {{ sortie.etat.libelle }} | Organisateur : {{ sortie.user.username }}
-        </p>
+        <tr>
+            <td> {{ sortie.name }} </td>
+            <td> {{ sortie.firstAirDate | date('d/m/y H:i') }} </td>
+            <td> {{ sortie.dateLimiteInscription | date('d/m/y') }} </td>
+            <td> {{ sortie.users | length }} / {{ sortie.nbInscriptionMax }} </td>
+            <td> {{ sortie.etat.libelle }} </td>
+            {% if app.user.username in sortie.users %}
+                <td>  x  </td>
+            {% else %}
+                <td>   </td>
+            {% endif %}
+            <td> {{ sortie.user.username }} </td>
+            <td>  </td>
+        </tr>
     {% endfor %}
+
+    </tbody>
 
 {% endblock %}
