--- a/templates/admin/adcampus.html.twig
+++ b/templates/admin/adcampus.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ parent() }} | Admin {% endblock %}
+{% block title %}{{ parent() }} | Admin | Campus {% endblock %}
 
 {% block body %}
 
