--- a/templates/sortie/create.html.twig
+++ b/templates/sortie/create.html.twig
@@ -7,32 +7,21 @@
 
 {% block body %}
 
+
     <h2> Creer une sortie !</h2>
     <br>
 
-    <h5> Nom de la sortie :</h5>
-    <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">sortie</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
-    </div>
-    <br>
 
-
-
-    <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Nombre de place</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="2"></textarea>
-    </div>
-
-    <div>Date et heure de la sortie : </div>
-    <div>Date limite d'inscription : </div>
-    <div>Duree : </div>
-    <div>Description et infos : </div>
-    <div>Campus : </div>
-
-
+  {{ form_start(sortieForm) }}
+  {{ form_widget(sortieForm) }}
     <button type="submit" class="btn btn-primary">Enregistrer</button>
     <button type="submit" class="btn btn-primary">Publier la sortie</button>
     <button type="submit" class="btn btn-primary">Annuler</button>
+
+  {{ form_end(sortieForm) }}
+<br>
+
+
+
 
 {% endblock %}
