--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -14,6 +14,9 @@
 
 
 
+
+
+/*
 footer a.text-light:hover { color: #fed136!important; text-decoration: none; }
 footer .cizgi { border-right: 1px solid #535e67; }
-@media (max-width: 992px) { footer .cizgi { border-right: none; } }
+@media (max-width: 992px) { footer .cizgi { border-right: none; } }*/
