Ajout remember me + modif nav + home

--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -9,6 +9,14 @@
     -ms-flex-pack: start;
     justify-content: flex-start;
 }
+.nav-link:hover { color: #fbc531; }
+.logout:hover { color: #fbc531; }
+
+.show{
+    width: 50vw;
+
+
+}
 
 
 
