--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,34 +3,46 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+    <form method="post">
+        {% if error %}
+            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputUsername">Username</label>
-    <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+        {% if app.user %}
+            <div class="mb-3">
+                Vous êtes déjà enregistré {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+            </div>
+        {% endif %}
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
+        <h1 class="container-fluid d-flex justify-content-center">Connexion  </h1>
+        <div class="container-fluid d-flex show">
+            <label for="inputUsername">Pseudo </label>
         </div>
-    #}
+        <div class="container-fluid d-flex show justify-content-center">
+            <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control"
+                   autocomplete="username" required autofocus>
+        </div>
+        <div class="container-fluid d-flex show">
+            <label for="inputPassword">Mot de passe</label>
+        </div>
+        <div class="container-fluid d-flex show justify-content-center">
+            <input type="password" name="password" id="inputPassword" class="form-control"
+                   autocomplete="current-password" required>
+        </div>
+        <div class="container-fluid d-flex show justify-content-center">
+        <input type="hidden" name="_csrf_token"
+               value="{{ csrf_token('authenticate') }}"
+        >
+        <label>
+            <input type="checkbox" name="_remember_me" checked/>
+            Se souvenir de moi
+        </label>
+        </div>
+        <div class="container-fluid d-flex show justify-content-center">
+        <button class="btn btn-lg btn-primary" type="submit">
+            Connexion
+        </button>
+        </div>
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
-</form>
+    </form>
 {% endblock %}
