--- a/templates/menu/nav.html.twig
+++ b/templates/menu/nav.html.twig
@@ -22,12 +22,16 @@
                                 <a class="nav-link" href="{{ path('admin_campus_list') }}"><i class="fa fa-home fa-fw mr-1"></i>Gestion Campus</a>
                             </li>
 
+                            <li class="nav-item pl-1">
+                                <a class="nav-link" href="{{ path('lieu_list') }}"><i class="fa fa-home fa-fw mr-1"></i>Gestion Lieux</a>
+                            </li>
+
+                            <li class="nav-item pl-1">
+                                <a class="nav-link" href="{{ path('admin_user_list') }}"><i class="fa fa-home fa-fw mr-1"></i>Gestion utilisateurs</a>
+                            </li>
 
                             <li class="nav-item pl-1">
                                 <a class="nav-link" href="{{ path('admin_user_add') }}"><i class="fa fa-home fa-fw mr-1"></i>Ajout d'un utilisateur</a>
-                            </li>
-                            <li class="nav-item pl-1">
-                                <a class="nav-link" href="{{ path('admin_user_list') }}"><i class="fa fa-home fa-fw mr-1"></i>Gestion utilisateurs</a>
                             </li>
                         {% endif %}
                     {% endfor %}
