--- a/templates/menu/nav.html.twig
+++ b/templates/menu/nav.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand navbar-light bg-light">
     <div class="container">
         <a class="navbar-brand text-white" href="{{ path('main_home') }}"><i
                     class="fa fa-graduation-cap fa-lg mr-2"></i>Sortir !</a>
